--- a/package.json
+++ b/package.json
@@ -4,14 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
-    "sqlite": "^2.9.2"
+    "sqlite": "^2.9.2",
+    "ws": "^5.2.1"
+  },
+  "devDependencies": {
+    "nodemon": "^1.17.5",
+    "wscat": "^2.2.1"
   }
 }
